--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8080
+
+MONGODB_CNN=mongodb+srv://user_node_cafe:lRdpecJl0wdUEZSN@miclustercafe.oaxwn.mongodb.net/cafeDB
+
+#USER=user_node_cafe
+#PASS=lRdpecJl0wdUEZSN
